Shared provider configuration as secret map